<resources>
    <string name="app_name">PhoneBook app</string>
    <string name="login_welcome_text">PhoneBook app \n with MVVM</string>
    <string name="email_text">Email...</string>
    <string name="password_text">Password...</string>
    <string name="login_btn_text">Log In</string>
    <string name="registration_btn_text">Registration</string>
    <string name="log_out_hint">Log Out</string>
    <string name="details_toolbar_title">Details info</string>
    <string name="contacts_toolbar_title">PhoneBook app</string>

    <string name="save_hint">Save</string>
    <string name="add_contact_title">Add Contact</string>

    <string name="add_contact_first_name">Please enter First Name</string>
    <string name="add_contact_last_name">Please enter Last Name</string>
    <string name="add_contact_phone">Please enter phone number</string>
    <string name="add_contact_email">Please enter email</string>
    <string name="add_contact_notes">Please enter notes</string>

    <string name="plus">+</string>
    <string name="new_contact_saved">New contactsRoom saved</string>
    <string name="cancel_hint">Cancel</string>

    <string name="empty_name">Please enter Name</string>
    <string name="empty_last_name">Please enter Last Name</string>
    <string name="empty_phone">Please enter Phone number</string>
    <string name="empty_email">Please enter Email address</string>
    <string name="empty_notes">Please enter Notes</string>
    <string name="email_invalid">Wrong email pattern. Please enter a valid email address</string>
    <string name="phone_invalid">Wrong phone pattern. Please enter a valid phone number and country code</string>

    <string name="login_is_empty">Please enter your email address</string>
    <string name="login_invalid">Wrong email pattern. Please enter a valid email address</string>
    <string name="password_is_empty">Please enter your password</string>
    <string name="password_invalid">The password length must be at least 8. Please enter a valid password</string>
    <string name="no_internet">Failed to pass validation. Check the Internet and try again</string>
    <string name="edit_contact_btn_text">Edit contact</string>
    <string name="delete_contact_btn_text">Delete contact</string>

    <string name="new_first_name_txt">New First Name</string>
    <string name="new_last_name_txt">New Last Name</string>
    <string name="new_phone_number_txt">New Phone Number</string>
    <string name="new_email_address_txt">New Email Address</string>
    <string name="new_notes_txt">New Notes</string>
    <string name="save_new_data_btn_text">Save new data</string>
    <string name="test_login_txt">Login: test1@gmail.com</string>
    <string name="test_password_txt">Password: 12345678</string>
    <string name="data_to_update_empty">Is no data to update</string>
    <string name="inner_contact_name_hint">Василий</string>
    <string name="inner_contact_phone_hint">+37493055062</string>
    <string name="details_first_name_hint">First Name</string>
    <string name="details_last_name_hint">Last Name</string>
    <string name="details_phone_hint">+37493055062</string>
    <string name="details_email_hint">test@gmail.com</string>
    <string name="details_notes_hint">Notes Hint</string>


</resources>
