<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="updateDataVieModel"
            type="com.infernal93.phonebookappmvvmanddagger.viewmodels.UpdateDataViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activities.UpdateDataActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true" >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/new_image"
                android:layout_width="@dimen/civ_size"
                android:layout_height="@dimen/civ_size"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:src="@drawable/ic_person_placeholder"
                app:civ_border_width="5dp"
                app:civ_border_color="@color/colorPrimary" />

            <EditText
                android:id="@+id/new_firstName"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_inputs"
                android:ems="10"

                android:inputType="text"
                android:textColorHint="@color/dark_gray"
                android:layout_below="@id/new_image"
                android:text="@={updateDataVieModel.mFirstName}"/>

            <EditText
                android:id="@+id/new_lastName"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_inputs"
                android:ems="10"
                android:hint="@string/new_last_name_txt"
                android:inputType="text"
                android:textColorHint="@color/dark_gray"
                android:layout_below="@id/new_firstName"
                android:text="@={updateDataVieModel.mLastName}"/>

            <EditText
                android:id="@+id/new_phone"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_inputs"
                android:ems="10"
                android:hint="@string/new_phone_number_txt"
                android:inputType="phone"
                android:textColorHint="@color/dark_gray"
                android:layout_below="@id/new_lastName"
                android:text="@={updateDataVieModel.mPhone}"/>

            <EditText
                android:id="@+id/new_email"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_inputs"
                android:ems="10"
                android:hint="@string/new_email_address_txt"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/dark_gray"
                android:layout_below="@id/new_phone"
                android:text="@={updateDataVieModel.mEmail}"/>

            <EditText
                android:id="@+id/new_notes"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_inputs"
                android:ems="10"
                android:hint="@string/new_notes_txt"
                android:inputType="text"
                android:textColorHint="@color/dark_gray"
                android:layout_below="@id/new_email"
                android:text="@={updateDataVieModel.mNotes}"/>

            <Button
                android:id="@+id/save_newData_btn"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_margin="25dp"
                android:background="@drawable/bg_buttons"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:text="@string/save_new_data_btn_text"
                android:layout_below="@id/new_notes"/>

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
